--- a/map_lib/src/main/AndroidManifest.xml
+++ b/map_lib/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:label="@string/app_name"
         android:supportsRtl="true">
 
