- 회원탈퇴 기능 추가. - 메인화면 상단 디자인 변경. - 검색화면 진입시 키보드 자동으로 올라오게 함 - 비회원 쿠폰 다운로드시 알림창 추가. - 예약하기 화면 : 취소규정 팝업 삭제. - 예약하기 화면 : 예상 적립금 디자인 변경.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,9 +77,9 @@ android {
             resValue("string", "google_map_key", "AIzaSyCo1LHLkRDdudRWIhosRwO-VOxFfSvZbqc");
             resValue("string", "facebook_provider", "com.facebook.app.NativeAppCallContentProvider640301742734227");
 
-            buildConfigField("String", "domain", "\"https://api-eb.dev.hotelnow.co.kr\"")
-            buildConfigField("String", "domain2", "\"http://api-eb.dev.hotelnow.co.kr\"")
-            buildConfigField("String", "domainssl", "\"https://api-eb.dev.hotelnow.co.kr\"")
+            buildConfigField("String", "domain", "\"https://api.dev.hotelnow.co.kr\"")
+            buildConfigField("String", "domain2", "\"http://api.dev.hotelnow.co.kr\"")
+            buildConfigField("String", "domainssl", "\"https://api.dev.hotelnow.co.kr\"")
             buildConfigField("String", "arsDomain", "\"https://payment-ars.dev.hotelnow.co.kr\"")
             buildConfigField("String", "billDomain", "\"https://payment.dev.hotelnow.co.kr\"")
             buildConfigField("String", "phonePayDomain", "\"https://payment-phone.dev.hotelnow.co.kr\"")
