--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,17 +76,37 @@ android {
             resValue("string", "google_map_key", "AIzaSyCo1LHLkRDdudRWIhosRwO-VOxFfSvZbqc");
             resValue("string", "facebook_provider", "com.facebook.app.NativeAppCallContentProvider640301742734227");
 
-            buildConfigField("String", "domain", "\"https://api.dev.hotelnow.co.kr\"")
-            buildConfigField("String", "domain2", "\"http://api.dev.hotelnow.co.kr\"")
-            buildConfigField("String", "domainssl", "\"https://api.dev.hotelnow.co.kr\"")
-            buildConfigField("String", "arsDomain", "\"https://payment-ars.dev.hotelnow.co.kr\"")
-            buildConfigField("String", "billDomain", "\"https://payment.dev.hotelnow.co.kr\"")
-            buildConfigField("String", "phonePayDomain", "\"https://payment-phone.dev.hotelnow.co.kr\"")
+            buildConfigField("String", "domain", "\"https://api-eb.dev.hotelnow.co.kr\"")
+            buildConfigField("String", "domain2", "\"http://api-eb.dev.hotelnow.co.kr\"")
+            buildConfigField("String", "domainssl", "\"https://api-eb.dev.hotelnow.co.kr\"")
+            buildConfigField("String", "arsDomain", "\"https://payment-ars-eb.dev.hotelnow.co.kr\"")
+            buildConfigField("String", "billDomain", "\"https://payment-eb.dev.hotelnow.co.kr\"")
+            buildConfigField("String", "phonePayDomain", "\"https://payment-phone-eb.dev.hotelnow.co.kr\"")
             buildConfigField("String", "cardDomain", "\"http://13.114.248.114:7777\"")
             buildConfigField("String", "googleProjectid", "\"369003584286\"")
-            buildConfigField("String", "kcpCardDomain", "\"https://payment.dev.hotelnow.co.kr/order_app.php\"")
+            buildConfigField("String", "kcpCardDomain", "\"https://payment-eb.dev.hotelnow.co.kr/order_app.php\"")
             buildConfigField("String", "webUrl", "\"https://www.dev.hotelnow.co.kr/ko\"")
             buildConfigField("String", "google_map_key2", "\"AIzaSyCo1LHLkRDdudRWIhosRwO-VOxFfSvZbqc\"")
+            buildConfigField("String", "test_jobkey", "\"FmYT/3QXuy1En/e5iIk4Ej/sgng=\"")
+            buildConfigField("String", "jobkey", "\"1tNS+MHM9YsmYs8Tjhkd3ZKYmoM=\"")
+        }
+
+        stage {
+            resValue("string", "app_name", "호텔나우");
+            resValue("string", "google_map_key", "AIzaSyDtgyy2TXgeIH3CrPh_C-R2Cv2aLteK_ME");
+            resValue("string", "facebook_provider", "com.facebook.app.NativeAppCallContentProvider752568681483147");
+
+            buildConfigField("String", "domain", "\"https://api-eb.hotelnow.co.kr\"")
+            buildConfigField("String", "domain2", "\"http://api-eb.hotelnow.co.kr\"")
+            buildConfigField("String", "domainssl", "\"https://api-eb.hotelnow.co.kr\"")
+            buildConfigField("String", "arsDomain", "\"http://payment-ars-eb.hotelnow.co.kr\"")
+            buildConfigField("String", "billDomain", "\"https://54.178.161.178:8808\"")
+            buildConfigField("String", "phonePayDomain", "\"http://payment-phone-eb.hotelnow.co.kr\"")
+            buildConfigField("String", "cardDomain", "\"https://54.178.161.178:7777\"")
+            buildConfigField("String", "googleProjectid", "\"369003584286\"")
+            buildConfigField("String", "kcpCardDomain", "\"http://payment-eb.hotelnow.co.kr/order_app.php\"")
+            buildConfigField("String", "webUrl", "\"https://www.hotelnow.co.kr/ko\"")
+            buildConfigField("String", "google_map_key2", "\"AIzaSyDtgyy2TXgeIH3CrPh_C-R2Cv2aLteK_ME\"")
             buildConfigField("String", "test_jobkey", "\"FmYT/3QXuy1En/e5iIk4Ej/sgng=\"")
             buildConfigField("String", "jobkey", "\"1tNS+MHM9YsmYs8Tjhkd3ZKYmoM=\"")
         }
