서비스 이용동의 설정 화면, 할인 혜택 화면, 회원가입 화면 적용

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -147,6 +147,10 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".activity.SettingActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".activity.SettingAlarmActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.LocationAgreeActivity"
+            android:screenOrientation="portrait"/>
         <activity android:name=".activity.PwCheckActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden"/>
