--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,14 +27,14 @@ android {
         }
     }
 
-    compileSdkVersion 27
+    compileSdkVersion 28
     flavorDimensions "default"
-    buildToolsVersion '27.0.3'
+    buildToolsVersion '28.0.3'
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.hotelnow"
         minSdkVersion 19
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 267
         versionName "5.18"
     }
@@ -156,13 +156,13 @@ dependencies {
     implementation group: project.KAKAO_SDK_GROUP, name: 'usermgmt', version: project.KAKAO_SDK_VERSION
     implementation group: project.KAKAO_SDK_GROUP, name: 'kakaolink', version: project.KAKAO_SDK_VERSION
     implementation group: project.KAKAO_SDK_GROUP, name: 'kakaotalk', version: project.KAKAO_SDK_VERSION
-    implementation 'com.android.support:appcompat-v7:27.0.2'
-    implementation 'com.android.support:support-media-compat:27.0.2'
-    implementation 'com.android.support:support-v4:27.0.2'
+    implementation 'com.android.support:appcompat-v7:28+'
+    implementation 'com.android.support:support-media-compat:28+'
+    implementation 'com.android.support:support-v4:28+'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:design:27.0.2'
-    implementation 'com.android.support:recyclerview-v7:27.0.2'
-    implementation 'com.android.support:cardview-v7:27.0.2'
+    implementation 'com.android.support:design:28+'
+    implementation 'com.android.support:recyclerview-v7:28+'
+    implementation 'com.android.support:cardview-v7:28+'
     implementation 'gun0912.ted:tedpermission:2.0.0'
     implementation 'com.google.firebase:firebase-core:16.0.9'
     implementation 'com.google.firebase:firebase-messaging:18.0.0'
@@ -171,7 +171,7 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:4.40.0'
     implementation 'com.tune:tune-marketing-console-sdk:4.15.0'
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.github.ittianyu:BottomNavigationViewEx:1.2.4'
+    implementation 'com.github.ittianyu:BottomNavigationViewEx:2.0.4'
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'com.github.armcha:AutoLinkTextView:0.3.0'
