target 28 적용시  지도 오류 및 필요한 라이브러리 3개 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         android:usesCleartextTraffic="true"
         android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
         android:theme="@style/AppTheme">
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
         <activity android:name="com.hotelnow.activity.ActLoading"
             android:screenOrientation="portrait"
             android:resizeableActivity="true"
