--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,6 @@ android {
     compileSdkVersion 28
     flavorDimensions "default"
     buildToolsVersion '28.0.3'
-    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.hotelnow"
         minSdkVersion 19
@@ -163,6 +162,9 @@ dependencies {
     implementation 'com.android.support:design:28+'
     implementation 'com.android.support:recyclerview-v7:28+'
     implementation 'com.android.support:cardview-v7:28+'
+    implementation 'com.android.support:customtabs:28.0.0'
+    implementation 'com.android.support:support-vector-drawable:28.0.0'
+    implementation 'com.android.support:support-media-compat:28.0.0'
     implementation 'gun0912.ted:tedpermission:2.0.0'
     implementation 'com.google.firebase:firebase-core:16.0.9'
     implementation 'com.google.firebase:firebase-messaging:18.0.0'
