--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -158,6 +158,8 @@
         <activity android:name=".activity.RetireActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden"/>
+        <activity android:name=".activity.DialogFullActivity"
+            android:screenOrientation="portrait" />
 
         <activity
             tools:replace="android:theme"
